tweaking styles for add menu item form

--- a/app/templates/add-menu-item.hbs
+++ b/app/templates/add-menu-item.hbs
@@ -1,7 +1,6 @@
-<h2>Add a Menu Item</h2>
+<h2>Add a menu item</h2>
 <form class="form-horizontal" id="formAddMenuItem">
     <fieldset>
-        <legend>General Information</legend>
         <div class="control-group">
             <label for="inputName">Name</label>
             <input class="input-xlarge" id="inputName" name="name" type="text" />
@@ -16,7 +15,6 @@
         </div>
     </fieldset>
     <fieldset>
-        <legend>Pricing</legend>
         <div class="control-group">
             <label class="radio">
                 <input checked name="sizeType" type="radio" value="singleSize" />
@@ -33,7 +31,7 @@
                 <input class="input-small" name="price" type="text" />
             </label>
         </div>
-        <div class="control-group hide" id="sizes">
+        <div class="hide" id="sizes">
         </div>
     </fieldset>
     <fieldset>
