backbone relational still not quite fixed

--- a/app/templates/add-menu-item-size.hbs
+++ b/app/templates/add-menu-item-size.hbs
@@ -1,12 +1,12 @@
 <label class="span2 input-prepend">
     <span class="add-on">Size</span>
-    <input class="input-small" name="sizeName" type="text" value="test" />
+    <input class="input-small" name="sizeName" type="text" />
 </label>
 <label class="span2 input-prepend">
     <span class="add-on">Price</span>
-    <input class="input-small" name="sizePrice" type="text" value="0" />
+    <input class="input-small" name="sizePrice" type="text" />
 </label>
-<div class="span2">
+<div class="span1">
     <button class="btn addMenuItemSize">+</button>
     <button class="btn deleteMenuItemSize">-</button>
 </div>
