--- a/app/templates/menu-item.hbs
+++ b/app/templates/menu-item.hbs
@@ -1,1 +1,3 @@
-<a href="">{{name}}</a>
+<td><a href="">{{name}}</a></td>
+<td><a href="">{{category}}</a></td>
+<td><a href="">{{#each sizes}}{{price}}{{else}}{{price}}{{/each}}</a></td>
