--- a/app/templates/add-menu-item-size.hbs
+++ b/app/templates/add-menu-item-size.hbs
@@ -3,7 +3,7 @@
     <input class="input-small" name="sizeName" type="text" />
 </label>
 <label class="span2 input-prepend">
-    <span class="add-on">Price</span>
+    <span class="add-on">$</span>
     <input class="input-small" name="sizePrice" type="text" />
 </label>
 <div class="span1">
