--- a/app/templates/add-menu-item.hbs
+++ b/app/templates/add-menu-item.hbs
@@ -25,9 +25,9 @@
                 This item comes in multiple sizes
             </label>
         </div>
-        <div class="control-group row" id="price">
-            <label class="span2 input-prepend">
-                <span class="add-on">Price</span>
+        <div class="control-group" id="price">
+            <label class="input-prepend">
+                <span class="add-on">$</span>
                 <input class="input-small" name="price" type="text" />
             </label>
         </div>
@@ -35,7 +35,7 @@
         </div>
     </fieldset>
     <fieldset>
-        <div class="control-group text-center padding-1 border-1">
+        <div class="control-group">
             <button class="btn btn-primary" type="submit">Save</button>
             <button class="btn btn-secondary" type="reset">Reset</button>
         </div>
