--- a/app/templates/menu-items.hbs
+++ b/app/templates/menu-items.hbs
@@ -1,10 +1,10 @@
 <h2>Menu</h2>
-<table class="table">
+<table class="table table-striped table-bordered">
     <thead>
         <tr>
-            <td>Name</td>
-            <td>Category</td>
-            <td>Price(s)</td>
+            <th>Name</th>
+            <th>Category</th>
+            <th>Price(s)</th>
         </tr>
     </thead>
     <tbody>
