nearly there with form

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,3 +3,12 @@
 .textarea-xlarge {
     width: 270px;
 }
+
+.modal > form {
+    margin-bottom: 0;
+}
+
+.modal-header > h2 {
+    margin-bottom: 0;
+    margin-top: 0;
+}
