--- a/app/templates/menu-item.hbs
+++ b/app/templates/menu-item.hbs
@@ -1,3 +1,16 @@
-<td><a href="">{{name}}</a></td>
-<td><a href="">{{category}}</a></td>
-<td><a href="">{{#each sizes}}{{price}}{{else}}{{price}}{{/each}}</a></td>
+<td>
+    <a href="#">
+        {{name}}
+    </a>
+</td>
+<td>
+    {{category}}
+</td>
+<td>
+    {{#if price}}
+        {{price}}
+    {{else}}
+        <div class="menuItemSizesContainer">
+        </div>
+    {{/if}}
+</td>
