--- a/app/templates/add-menu-item.hbs
+++ b/app/templates/add-menu-item.hbs
@@ -1,10 +1,10 @@
 <div class="modal hide" id="addMenuItem">
-    <form class="form-horizontal" id="formAddMenuItem">
-        <div class="modal-header">
-            <button aria-hidden="true" class="close" type="button">&times;</button>
-            <h2>Add a menu item</h2>
-        </div>
-        <div class="modal-body">
+    <div class="modal-header">
+        <button aria-hidden="true" class="close" type="button">&times;</button>
+        <h2>Add a menu item</h2>
+    </div>
+    <div class="modal-body">
+        <form class="form-horizontal" id="formAddMenuItem">
             <fieldset>
                 <div class="control-group">
                     <label for="inputName">Name</label>
@@ -39,10 +39,14 @@
                 <div class="hide" id="sizes">
                 </div>
             </fieldset>
-        </div>
-        <div class="modal-footer">
-            <button class="btn btn-primary" type="submit">Save</button>
-            <button class="btn btn-secondary" type="reset">Cancel</button>
-        </div>
-    </form>
+            <fieldset>
+                <div class="control-group">
+                    <button class="btn btn-primary" type="submit">Save</button>
+                    <button class="btn btn-secondary" type="reset">Cancel</button>
+                </div>
+            </fieldset>
+        </form>
+    </div>
+    <div class="modal-footer">
+    </div>
 </div>
