tightened up logic around adding of sizes / making model names consistent with xml

--- a/app/templates/addMenuItem.hbs
+++ b/app/templates/addMenuItem.hbs
@@ -8,32 +8,32 @@
             <fieldset>
                 <div class="control-group">
                     <label for="inputName">Name</label>
-                    <input class="input-xlarge" id="inputName" name="name" type="text" />
+                    <input class="input-xlarge" id="inputName" name="menuItemName" type="text" />
                 </div>
                 <div class="control-group">
                     <label for="inputDescription">Description</label>
-                    <textarea class="textarea-xlarge" id="inputDescription" name="description" rows="3" type="text"></textarea>
+                    <textarea class="textarea-xlarge" id="inputDescription" name="menuItemDescription" rows="3" type="text"></textarea>
                 </div>
                 <div class="control-group">
                     <label for="inputCategory">Category</label>
-                    <input class="input-medium" id="inputCategory" name="category" type="text" />
+                    <input class="input-medium" id="inputCategory" name="menuItemCategory" type="text" />
                 </div>
             </fieldset>
             <fieldset>
                 <div class="control-group">
                     <label class="radio">
-                        <input checked name="sizeType" type="radio" value="singleSize" />
+                        <input checked name="menuItemSizeType" type="radio" value="singleSize" />
                         This item comes in one size
                     </label>
                     <label class="radio">
-                        <input name="sizeType" type="radio" value="multiSize" />
+                        <input name="menuItemSizeType" type="radio" value="multiSize" />
                         This item comes in multiple sizes
                     </label>
                 </div>
                 <div class="control-group" id="price">
                     <label class="input-prepend">
                         <span class="add-on">$</span>
-                        <input class="input-small" name="price" type="text" />
+                        <input class="input-small" name="menuItemPrice" type="text" />
                     </label>
                 </div>
                 <div class="hide" id="sizes">
