--- a/app/templates/menuItem.hbs
+++ b/app/templates/menuItem.hbs
@@ -1,14 +1,14 @@
 <td>
     <a href="#">
-        {{name}}
+        {{menuItemName}}
     </a>
 </td>
 <td>
-    {{category}}
+    {{menuItemCategory}}
 </td>
 <td>
-    {{#if price}}
-        {{price}}
+    {{#if menuItemPrice}}
+        {{menuItemPrice}}
     {{else}}
         <div class="menuItemSizesContainer">
         </div>
