--- a/app/templates/menuItems.hbs
+++ b/app/templates/menuItems.hbs
@@ -1,4 +1,11 @@
-<h2>Menu</h2>
+<div class="row">
+    <div class="span4">
+        <h2>Menu</h2>
+    </div>
+    <div class="span4 offset1 text-right">
+        <a class="btn btn-primary" href="#addMenuItem">Add a Menu Item</a>
+    </div>
+</div>
 <table class="table table-striped table-bordered">
     <thead>
         <tr>
