--- a/app/templates/menuItem.hbs
+++ b/app/templates/menuItem.hbs
@@ -1,7 +1,5 @@
 <td>
-    <a href="#">
-        {{menuItemName}}
-    </a>
+    <a href="#">{{menuItemName}}</a>
 </td>
 <td>
     {{menuItemCategory}}
