added count of menu items per category

--- a/app/templates/menuItemCategory.hbs
+++ b/app/templates/menuItemCategory.hbs
@@ -1,1 +1,1 @@
-<a class="menuItemCategory" href="#">{{menuItemCategory}}</a>
+<a class="menuItemCategory" href="#">{{menuItemCategory}}</a> <span>({{numMenuItems}})</span>
