--- a/app/templates/toolbar.hbs
+++ b/app/templates/toolbar.hbs
@@ -1,2 +1,2 @@
-<h2>Toolbar</h2>
-<a class="btn btn-primary" href="#addMenuItem">Add a Menu Item</a>
+<button class="btn btn-primary" href="#addMenuItem">Add a Menu Item</button>
+<button class="btn btn-secondary" href="#uploadMenu">Upload a Menu</button>
