--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,11 +1,15 @@
 @import 'sass-bootstrap/lib/bootstrap';
 
 header {
-    border-bottom:1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 1em;
+    padding: 1em 0;
 }
 
 footer {
     border-top:1px solid #ddd;
+    margin-top: 1em;
+    padding: 1em 0;
 }
 
 .textarea-xlarge {
