--- a/app/templates/layout.hbs
+++ b/app/templates/layout.hbs
@@ -1,35 +1,35 @@
             <div class="row">
-                <div>
+                <div class="span8 offset2">
                     <header id="header">
-                        <div class="span5 offset1">
-                            <h1>Three Aces</h1>
-                        </div>
-                        <div class="span5 text-right">
-                            <select id="appSelector">
-                                <option value="public">Public</option>
-                                <option value="private">Private</option>
-                            </select>
+                        <div class="row">
+                            <div class="span4">
+                                <h1>Three Aces</h1>
+                            </div>
+                            <div class="span4 text-right">
+                                <select id="appSelector">
+                                    <option value="public">Public App</option>
+                                    <option value="private">Private App</option>
+                                </select>
+                            </div>
                         </div>
                     </header>
                 </div>
             </div>
             <div class="row">
-                <div>
-                    <div class="span3 offset1">
-                        <nav id="navigation">
-                        </nav>
-                    </div>
-                    <div class="span7">
-                        <article id="main">
-                            <div id="loading">
-                                <img src="/images/ajax-loader.gif" />
-                            </div>
-                        </article>
-                    </div>
+                <div class="span8 offset2">
+                    <nav id="navigation">
+                    </nav>
+                    <article id="main">
+<!--
+                        <div id="loading">
+                            <img src="/images/ajax-loader.gif" />
+                        </div>
+-->
+                    </article>
                 </div>
             </div>
             <div class="row">
-                <div>
+                <div class="span8 offset2">
                     <footer class="text-center" id="footer">
                         <p>Built with <a href="https://github.com/mrichard/generator-marionette" target="_blank">generator-marionette</a></p>
                     </footer>
