--- a/app/templates/toolbar.hbs
+++ b/app/templates/toolbar.hbs
@@ -1,2 +1,3 @@
-<button class="btn btn-primary" href="#addMenuItem">Add a Menu Item</button>
-<button class="btn btn-secondary" href="#uploadMenu">Upload a Menu</button>
+<div class="control-group">
+    <button class="btn btn-primary margin-bottom-10px" href="#addMenuItem">Add a Menu Item</button>
+</div>
