--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,6 +12,10 @@ footer {
     padding: 1em 0;
 }
 
+.margin-bottom-10px {
+    margin-bottom: 10px;
+}
+
 .textarea-xlarge {
     width: 270px;
 }
