--- a/app/templates/layout.hbs
+++ b/app/templates/layout.hbs
@@ -3,7 +3,7 @@
                     <header id="header">
                         <div class="row">
                             <div class="span4">
-                                <h1>Three Aces</h1>
+                                <h1>Open Menu</h1>
                             </div>
                             <div class="span4 text-right">
                                 <select id="appSelector">
