--- a/app/templates/item/addRestaurant.hbs
+++ b/app/templates/item/addRestaurant.hbs
@@ -1,9 +1,7 @@
 <div class="modal hide" id="addRestaurant">
     <div class="modal-header">
         <button aria-hidden="true" class="close" type="button">&times;</button>
-        <h2>
-            Add a restaurant
-        </h2>
+        <h2>Add a restaurant</h2>
     </div>
     <div class="modal-body">
     </div>
