add restaurant dialog

--- a/app/templates/item/openMenuDetail.hbs
+++ b/app/templates/item/openMenuDetail.hbs
@@ -13,8 +13,7 @@
                 <address>
                     <p>{{restaurantInfo.restaurantName}}<br>
                     {{restaurantInfo.address1}}<br>
-                    {{restaurantInfo.cityTown}}<br>
-                    {{restaurantInfo.stateProvince}} {{restaurantInfo.postalCode}}<br>
+                    {{restaurantInfo.cityTown}}, {{restaurantInfo.stateProvince}} {{restaurantInfo.postalCode}}<br>
                     {{restaurantInfo.country}}</p>
                 </address>
                 <dl>
