--- a/app/templates/item/openMenuDetail.hbs
+++ b/app/templates/item/openMenuDetail.hbs
@@ -1,4 +1,4 @@
-<div id="restaurantInfo">
+<div class="row" id="restaurantInfo">
     <div class="span8">
         <div class="row">
             <div class="span7">
@@ -26,7 +26,7 @@
         </div>
     </div>
 </div>
-<div id="environmentInfo">
+<div class="row" id="environmentInfo">
     <div class="span8">
         <div class="row">
             <div class="span7">
@@ -46,5 +46,5 @@
         </div>
     </div>
 </div>
-<div id="menus">
+<div class="row" id="menus">
 </div>
