giving the rendering forms inline approach a try

--- a/app/templates/composite/openMenus.hbs
+++ b/app/templates/composite/openMenus.hbs
@@ -6,6 +6,7 @@
         <tr>
             <th>Restaurant Name</th>
             <th>Location</th>
+            <th>Phone</th>
         </tr>
     </thead>
     <tbody>
