--- a/app/templates/item/openMenu.hbs
+++ b/app/templates/item/openMenu.hbs
@@ -1,2 +1,3 @@
 <td><a href="#detail">{{restaurantInfo.restaurantName}}</a></td>
 <td>{{restaurantInfo.cityTown}}, {{restaurantInfo.stateProvince}}</td>
+<td>{{restaurantInfo.phone}}</td>
