--- a/app/templates/layout.hbs
+++ b/app/templates/layout.hbs
@@ -1,39 +1,31 @@
-            <div class="row">
-                <div class="span8 offset2">
-                    <header id="header">
-                        <div class="row">
-                            <div class="span4">
-                                <h1>Open Menu</h1>
-                            </div>
-                            <div class="span4 text-right">
-                                <select id="appSelector">
-                                    <option value="public">Public App</option>
-                                    <option value="private">Private App</option>
-                                </select>
-                            </div>
-                        </div>
-                    </header>
+            <header class="row" id="header">
+                <div class="span4 offset2">
+                    <h1>Open Menu</h1>
                 </div>
-            </div>
+                <div class="span4 text-right">
+                    <select id="appSelector">
+                        <option value="private">Private App</option>
+                        <option value="public">Public App</option>
+                    </select>
+                </div>
+            </header>
             <div class="row">
                 <div class="span8 offset2">
                     <nav id="navigation">
                     </nav>
                     <article id="main">
-<!--
+    <!--
                         <div id="loading">
                             <img src="/images/ajax-loader.gif" />
                         </div>
--->
+    -->
                     </article>
                 </div>
             </div>
-            <div class="row">
+            <footer class="row text-center" id="footer">
                 <div class="span8 offset2">
-                    <footer class="text-center" id="footer">
-                        <p>Built with <a href="https://github.com/mrichard/generator-marionette" target="_blank">generator-marionette</a></p>
-                    </footer>
+                    <p>Built with <a href="https://github.com/mrichard/generator-marionette" target="_blank">generator-marionette</a></p>
                 </div>
-            </div>
+            </footer>
             <div id="dialog">
             </div>
