added delete open menu functionality

--- a/app/templates/composite/openMenusList.hbs
+++ b/app/templates/composite/openMenusList.hbs
@@ -7,6 +7,7 @@
             <th>Restaurant Name</th>
             <th>Location</th>
             <th>Phone</th>
+            <th>Delete</th>
         </tr>
     </thead>
     <tbody>
