--- a/app/templates/item/openMenuItem.hbs
+++ b/app/templates/item/openMenuItem.hbs
@@ -1,3 +1,4 @@
-<td><a href="#detail">{{restaurantInfo.restaurantName}}</a></td>
+<td><a href="#show">{{restaurantInfo.restaurantName}}</a></td>
 <td>{{restaurantInfo.cityTown}}, {{restaurantInfo.stateProvince}}</td>
 <td>{{restaurantInfo.phone}}</td>
+<td><a href="#delete">Delete</a></td>
