--- a/app/templates/composite/openMenusList.hbs
+++ b/app/templates/composite/openMenusList.hbs
@@ -1,5 +1,5 @@
 <div class="control-group">
-    <a class="btn btn-primary margin-bottom-10px" href="#addOpenMenu">Add an Open Menu</a>
+    <a class="btn btn-primary margin-bottom-10px" href="#add">Add an Open Menu</a>
 </div>
 <table class="table table-striped table-bordered">
     <thead>
@@ -7,6 +7,7 @@
             <th>Restaurant Name</th>
             <th>Location</th>
             <th>Phone</th>
+            <th>Edit</th>
             <th>Delete</th>
         </tr>
     </thead>
