--- a/app/templates/item/openMenuItem.hbs
+++ b/app/templates/item/openMenuItem.hbs
@@ -1,4 +1,5 @@
-<td><a href="#show">{{restaurantInfo.restaurantName}}</a></td>
+<td>{{restaurantInfo.restaurantName}}</td>
 <td>{{restaurantInfo.cityTown}}, {{restaurantInfo.stateProvince}}</td>
 <td>{{restaurantInfo.phone}}</td>
+<td><a href="#edit">Edit</a></td>
 <td><a href="#delete">Delete</a></td>
