backbone relational and server-side routes and modeling

--- a/app/templates/item/openMenuDetail.hbs
+++ b/app/templates/item/openMenuDetail.hbs
@@ -1,9 +1,6 @@
 <div id="restaurantInfo">
-    <h2>Restaurant Info</h2>
 </div>
-<div id="environmentInfo">
-    <h2>Environment Info</h2>
+<div id="environment">
 </div>
 <div id="menus">
-    <h2>Menus</h2>
 </div>
