added menus view with dummy data to open menu detail page

--- a/app/templates/item/openMenuDetail.hbs
+++ b/app/templates/item/openMenuDetail.hbs
@@ -1,6 +1,9 @@
 <div id="restaurantInfo">
+    <h2>Restaurant Info</h2>
 </div>
 <div id="environment">
+    <h2>Environment</h2>
 </div>
 <div id="menus">
+    <h2>Menus</h2>
 </div>
