--- a/app/templates/item/menuItem.hbs
+++ b/app/templates/item/menuItem.hbs
@@ -1,14 +1,4 @@
-<td>
-    <a href="#">{{menuItemName}}</a>
-</td>
-<td>
-    {{menuItemCategory}}
-</td>
-<td>
-    {{#if menuItemPrice}}
-        {{menuItemPrice}}
-    {{else}}
-        <div class="menuItemSizesContainer">
-        </div>
-    {{/if}}
-</td>
+<td>{{menuName}}</td>
+<td>{{currencySymbol}}</td>
+<td><a href="#edit">Edit</a></td>
+<td><a href="#delete">Delete</a></td>
