moving forms into their own folder and relevant code changes

--- a/app/templates/item/openMenuDetail.hbs
+++ b/app/templates/item/openMenuDetail.hbs
@@ -1,5 +1,5 @@
-<div id="restaurantInfo">
-    <h2>Restaurant Info</h2>
+<div id="restaurant">
+    <h2>Restaurant</h2>
 </div>
 <div id="environment">
     <h2>Environment</h2>
