--- a/app/templates/composite/menusList.hbs
+++ b/app/templates/composite/menusList.hbs
@@ -1,5 +1,5 @@
 <div class="control-group">
-    <a class="btn btn-primary margin-bottom-10px" href="#add">Add a Menu</a>
+    <a class="btn btn-primary margin-bottom-10px" href="#add">Add a menu</a>
 </div>
 <table class="table table-striped table-bordered">
     <thead>
