adding screen header view

--- a/app/templates/layouts/screen.hbs
+++ b/app/templates/layouts/screen.hbs
@@ -1,5 +1,6 @@
 <div class="screen-header">
-    <h2>\{{Insert title here}}</h2>
+    <h2>{{title}}</h2>
+    <p>{{description}}</p>
 </div>
 <div class="screen-body">
 </div>
