giving screen headers file recursive structure

--- a/app/templates/layouts/shell.hbs
+++ b/app/templates/layouts/shell.hbs
@@ -1,6 +1,6 @@
 <header class="row" id="header">
     <div class="span4 offset2">
-        <h1>Open Menu</h1>
+        <h1>OMG</h1>
     </div>
     <div class="span4 text-right">
         <select id="appSelector">
