--- a/app/templates/private/screens/openMenus/composite.hbs
+++ b/app/templates/private/screens/openMenus/composite.hbs
@@ -5,7 +5,7 @@
     <thead>
         <tr>
             <th>Restaurant Name</th>
-            <th>Location</th>
+            <th>Address</th>
             <th>Phone</th>
             <th>Edit</th>
             <th>Delete</th>
