added basic navigation via tabs

--- a/app/templates/layouts/main.hbs
+++ b/app/templates/layouts/main.hbs
@@ -1,5 +1,11 @@
 <div class="row">
     <div class="span10">
+        <div id="main-nav">
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="span10">
         <div id="main-header">
             \{{article header}}
         </div>
