--- a/app/templates/layouts/mainNav.hbs
+++ b/app/templates/layouts/mainNav.hbs
@@ -1,5 +1,5 @@
 <ul class="nav nav-tabs">
-    <li class="active"><a href="#restaurant">Restaurant</a></li>
+    <li><a href="#restaurant">Restaurant</a></li>
     <li><a href="#environment">Environment</a></li>
     <li><a href="#menus">Menus</a></li>
 </ul>
