refining navigation system

--- a/app/templates/layouts/mainNav.hbs
+++ b/app/templates/layouts/mainNav.hbs
@@ -1,5 +1,9 @@
-<ul class="nav nav-tabs">
-    <li><a href="#restaurant">Restaurant</a></li>
-    <li><a href="#environment">Environment</a></li>
-    <li><a href="#menus">Menus</a></li>
+<ul>
+    <li><a href="#openMenus">OpenMenus</a>
+        <ul>
+            <li><a href="#restaurant">Restaurant</a></li>
+            <li><a href="#environment">Environment</a></li>
+            <li><a href="#menus">Menus</a></li>
+        </ul>
+    </li>
 </ul>
