created a menu-level page and introduced an eventing system for layouts

--- a/app/templates/layouts/mainNav.hbs
+++ b/app/templates/layouts/mainNav.hbs
@@ -1,9 +1,16 @@
 <ul>
-    <li><a href="#openMenus">Open Menus</a>
+    <li>
+        <a href="#openMenus">Open menus</a>
         <ul>
-            <li><a href="#restaurant">Restaurant</a></li>
-            <li><a href="#environment">Environment</a></li>
-            <li><a href="#menus">Menus</a></li>
+            <li>
+                <a href="#restaurant">Restaurant</a>
+            </li>
+            <li>
+                <a href="#environment">Environment</a>
+            </li>
+            <li>
+                <a href="#menus">Menus</a>
+            </li>
         </ul>
     </li>
 </ul>
