--- a/app/templates/layouts/primary.hbs
+++ b/app/templates/layouts/primary.hbs
@@ -1,21 +1,21 @@
 <div class="row">
     <div class="span12">
         <div id="main-header">
-            \{{article header}}
+            \{{main header}}
         </div>
     </div>
 </div>
 <div class="row">
     <div class="span12">
-        <div id="main-content">
-            \{{article content}}
+        <div id="main-body">
+            \{{main body}}
         </div>
     </div>
 </div>
 <div class="row">
     <div class="span12">
         <div id="main-footer">
-            \{{article footer}}
+            \{{main footer}}
         </div>
     </div>
 </div>
