--- a/app/templates/layouts/secondary.hbs
+++ b/app/templates/layouts/secondary.hbs
@@ -1,28 +1,28 @@
 <div class="row">
     <div class="span2">
         <div id="main-nav">
-            \{{article nav}}
+            \{{main nav}}
         </div>
     </div>
     <div class="span10">
         <div class="row">
             <div class="span10">
                 <div id="main-header">
-                    \{{article header}}
+                    \{{main header}}
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="span10">
-                <div id="main-content">
-                    \{{article content}}
+                <div id="main-body">
+                    \{{main body}}
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="span10">
                 <div id="main-footer">
-                    \{{article footer}}
+                    \{{main footer}}
                 </div>
             </div>
         </div>
