added tabs view for menu

--- a/app/templates/private/screens/menu/item.hbs
+++ b/app/templates/private/screens/menu/item.hbs
@@ -1,21 +1,13 @@
-<div class="row">
-    <div class="span10">
-        <div id="menu">
-            \{{menu}}
-        </div>
+<ul class="nav nav-tabs">
+    <li class="active"><a href="#menu">Menu</a></li>
+    <li><a href="#menu-groups">Menu groups</a></li>
+    <li><a href="#menu-items">Menu items</a></li>
+</ul>
+<div class="tab-content">
+    <div class="tab-pane active" id="menu">
     </div>
-</div>
-<div class="row">
-    <div class="span10">
-        <div id="menu-groups">
-            \{{menu groups}}
-        </div>
+    <div class="tab-pane" id="menu-groups">
     </div>
-</div>
-<div class="row">
-    <div class="span10">
-        <div id="menu-items">
-            \{{menu items}}
-        </div>
+    <div class="tab-pane" id="menu-items">
     </div>
 </div>
