added ability to dynamically load menu groups and menu items modules within menu module

--- a/app/templates/layouts/menu.hbs
+++ b/app/templates/layouts/menu.hbs
@@ -1,13 +1,13 @@
 <ul class="nav nav-tabs">
-    <li><a href="#menu"></li>
-    <li><a href="#menu-groups"></li>
-    <li><a href="#menu-items"></li>
+    <li class="active"><a href="#menu">Menu</a></li>
+    <li><a href="#menuGroups">Menu groups</a></li>
+    <li><a href="#menuItems">Menu items</a></li>
 </ul>
 <div class="tab-content">
-    <div class="tab-pane" id="menu">
+    <div class="tab-pane active" id="menu">
     </div>
-    <div class="tab-pane" id="menu-groups">
+    <div class="tab-pane" id="menuGroups">
     </div>
-    <div class="tab-pane" id="menu-items">
+    <div class="tab-pane" id="menuItems">
     </div>
 </div>
