added menu group module

--- a/app/templates/layouts/dialog.hbs
+++ b/app/templates/layouts/dialog.hbs
@@ -1,6 +1,6 @@
 <div class="modal-header">
     <button aria-hidden="true" class="close" type="button">&times;</button>
-    <div class="modal-header-title">
+    <div class="modal-title">
     </div>
 </div>
 <div class="modal-body">
