--- a/app/templates/layouts/menu.hbs
+++ b/app/templates/layouts/menu.hbs
@@ -1,13 +1,16 @@
 <ul class="nav nav-tabs">
-    <li class="active"><a href="#menu">Menu</a></li>
+    <li class="active"><a href="#menuInfo">Menu</a></li>
     <li><a href="#menuGroups">Menu groups</a></li>
     <li><a href="#menuItems">Menu items</a></li>
 </ul>
 <div class="tab-content">
-    <div class="tab-pane active" id="menu">
+    <div class="tab-pane active" id="menuInfo">
+        \{{menu info}}
     </div>
     <div class="tab-pane" id="menuGroups">
+        \{{menu groups}}
     </div>
     <div class="tab-pane" id="menuItems">
+        \{{menu items}}
     </div>
 </div>
