--- a/app/templates/layouts/dialog.hbs
+++ b/app/templates/layouts/dialog.hbs
@@ -1,9 +1,12 @@
 <div class="modal-header">
     <button aria-hidden="true" class="close" type="button">&times;</button>
     <div class="modal-title">
+        \{{modal title}}
     </div>
 </div>
 <div class="modal-body">
+    \{{modal body}}
 </div>
 <div class="modal-footer">
+    \{{modal footer}}
 </div>
