added config for layouts and incorporated into module manager

--- a/app/templates/layouts/menu.hbs
+++ b/app/templates/layouts/menu.hbs
@@ -1,5 +1,5 @@
 <ul class="nav nav-tabs">
-    <li class="active"><a href="#menuInfo">Menu</a></li>
+    <li class="active"><a href="#menuInfo">Menu info</a></li>
     <li><a href="#menuGroups">Menu groups</a></li>
     <li><a href="#menuItems">Menu items</a></li>
 </ul>
