--- a/app/templates/layouts/container.hbs
+++ b/app/templates/layouts/container.hbs
@@ -1,13 +1,13 @@
 <div class="row">
     <div class="span12">
-        <header id="header">
+        <header id="header-region">
             <h1 class="text-center">Open Menu App</h1>
         </header>
     </div>
 </div>
 <div class="row">
     <div class="span12">
-        <article id="main">
+        <article id="main-region">
             <!--
             <div id="loading">
                 <img src="/images/ajax-loader.gif" />
@@ -18,7 +18,7 @@
 </div>
 <div class="row">
     <div class="span12">
-        <footer id="footer">
+        <footer id="footer-region">
             <p class="text-center">Built with <a href="https://github.com/mrichard/generator-marionette" target="_blank">generator-marionette</a></p>
         </footer>
     </div>
