begun implementing routing for private open menus and menus

--- a/app/scripts/apps/private/apps/menus/list/templates/list_item.hbs
+++ b/app/scripts/apps/private/apps/menus/list/templates/list_item.hbs
@@ -1,11 +1,11 @@
 <td>{{menuName}}</td>
 <td>{{currencySymbol}}</td>
 <td>
-	<a class="btn btn-small js-show" href="#!/openmenus/{{_openMenuId}}/menus/{{_id}}">
+	<a class="btn btn-small js-show" href="#">
 		<i class=""></i>
 		Show
 	</a>
-	<a class="btn btn-small js-edit" href="#!/openmenus/{{_openMenuId}}/menus/{{_id}}">
+	<a class="btn btn-small js-edit" href="#">
 		<i class="icon-pencil"></i>
 		Edit
 	</a>
