--- a/app/scripts/apps/private/apps/open_menus/list/templates/list_item.hbs
+++ b/app/scripts/apps/private/apps/open_menus/list/templates/list_item.hbs
@@ -8,11 +8,11 @@
 	{{restaurantInfo.phone}}
 </td>
 <td>
-	<a class="btn btn-small js-show" href="#!/openmenus/{{_id}}">
+	<a class="btn btn-small js-show" href="#">
 		<i class=""></i>
 		Show
 	</a>
-	<a class="btn btn-small js-edit" href="#!/openmenus/{{_id}}">
+	<a class="btn btn-small js-edit" href="#">
 		<i class="icon-pencil"></i>
 		Edit
 	</a>
