--- a/app/scripts/apps/private/apps/menus/list/templates/panel.hbs
+++ b/app/scripts/apps/private/apps/menus/list/templates/panel.hbs
@@ -1,1 +1,1 @@
-<a class="btn btn-primary js-new" href="#!/openmenus/{{_id}}/menus">New menu</a>
+<a class="btn btn-primary js-new" href="#">New menu</a>
