added ability to return to open menus page from within open menu add/edit mode

--- a/app/scripts/apps/private/apps/open_menus/common/views/new_edit/templates/layout.hbs
+++ b/app/scripts/apps/private/apps/open_menus/common/views/new_edit/templates/layout.hbs
@@ -1,28 +1,2 @@
-<div class="row">
-    <div class="span2">
-        <ul class="nav nav-tabs">
-            <li class="active">
-                <a href="#restaurant-region">
-                    Restaurant
-                </a>
-            </li>
-            <li>
-                <a href="#environment-region">
-                    Environment
-                </a>
-            </li>
-            <li>
-                <a href="#menus-region">
-                    Menus
-                </a>
-            </li>
-        </ul>
-    </div>
-    <div class="span10">
-        <div class="tab-content">
-            <div class="tab-pane active" id="restaurant-region"></div>
-            <div class="tab-pane" id="environment-region"></div>
-            <div class="tab-pane" id="menus-region"></div>
-        </div>
-    </div>
-</div>
+<div class="top-region"></div>
+<div class="bottom-region"></div>
