fixed the problem of bootstrap icons not showing up

--- a/app/scripts/apps/private/apps/menus/list/templates/list_item.hbs
+++ b/app/scripts/apps/private/apps/menus/list/templates/list_item.hbs
@@ -2,7 +2,7 @@
 <td>{{currencySymbol}}</td>
 <td>
 	<a class="btn btn-small js-show" href="#">
-		<i class=""></i>
+		<i class="icon-eye-open"></i>
 		Show
 	</a>
 	<a class="btn btn-small js-edit" href="#">
