--- a/app/scripts/apps/private/apps/menu_groups/list/templates/list_item.hbs
+++ b/app/scripts/apps/private/apps/menu_groups/list/templates/list_item.hbs
@@ -1,7 +1,7 @@
 <td>{{groupName}}</td>
 <td>
 	<a class="btn btn-small js-show" href="#">
-		<i class=""></i>
+		<i class="icon-eye-open"></i>
 		Show
 	</a>
 	<a class="btn btn-small js-edit" href="#">
