--- a/app/scripts/apps/private/apps/open_menus/list/templates/list_item.hbs
+++ b/app/scripts/apps/private/apps/open_menus/list/templates/list_item.hbs
@@ -9,7 +9,7 @@
 </td>
 <td>
 	<a class="btn btn-small js-show" href="#">
-		<i class=""></i>
+		<i class="icon-eye-open"></i>
 		Show
 	</a>
 	<a class="btn btn-small js-edit" href="#">
