added menu items module and updated to bootstrap3

--- a/app/scripts/apps/private/apps/open_menus/list/templates/list_item.hbs
+++ b/app/scripts/apps/private/apps/open_menus/list/templates/list_item.hbs
@@ -8,15 +8,15 @@
 	{{restaurantInfo.phone}}
 </td>
 <td>
-	<a class="btn btn-small js-show" href="#">
+	<a class="btn btn-default btn-sm js-show" href="#" role="button">
 		<i class="icon-eye-open"></i>
 		Show
 	</a>
-	<a class="btn btn-small js-edit" href="#">
+	<a class="btn btn-default btn-sm js-edit" href="#" role="button">
 		<i class="icon-pencil"></i>
 		Edit
 	</a>
-	<button class="btn btn-small js-delete">
+	<button class="btn btn-default btn-sm js-delete" role="button">
 		<i class="icon-remove"></i>
 		Delete
 	</button>
