--- a/app/scripts/apps/private/apps/menu_groups/list/templates/list_item.hbs
+++ b/app/scripts/apps/private/apps/menu_groups/list/templates/list_item.hbs
@@ -1,14 +1,14 @@
 <td>{{groupName}}</td>
 <td>
-	<a class="btn btn-small js-show" href="#">
+	<a class="btn btn-default btn-sm js-show" href="#" role="button">
 		<i class="icon-eye-open"></i>
 		Show
 	</a>
-	<a class="btn btn-small js-edit" href="#">
+	<a class="btn btn-default btn-sm js-edit" href="#" role="button">
 		<i class="icon-pencil"></i>
 		Edit
 	</a>
-	<button class="btn btn-small js-delete">
+	<button class="btn btn-default btn-sm js-delete">
 		<i class="icon-remove"></i>
 		Delete
 	</button>
