--- a/app/scripts/apps/private/apps/menu_groups/list/templates/panel.hbs
+++ b/app/scripts/apps/private/apps/menu_groups/list/templates/panel.hbs
@@ -1,1 +1,1 @@
-<a class="btn btn-primary js-new" href="#">New menu group</a>
+<a class="btn btn-primary js-new" href="#" role="button">New menu group</a>
