--- a/app/scripts/apps/private/apps/menu_items/list/templates/list_item.hbs
+++ b/app/scripts/apps/private/apps/menu_items/list/templates/list_item.hbs
@@ -1,5 +1,6 @@
-<td>{{menuName}}</td>
-<td>{{currencySymbol}}</td>
+<td>{{menuItemName}}</td>
+<td>{{menuItemDescription}}</td>
+<td>{{menuItemPrice}}</td>
 <td>
 	<a class="btn btn-default btn-sm js-show" href="#" role="button">
 		<i class="icon-eye-open"></i>
@@ -9,7 +10,7 @@
 		<i class="icon-pencil"></i>
 		Edit
 	</a>
-	<button class="btn btn-default btn-sm js-delete" role="button">
+	<button class="btn btn-default btn-sm js-delete">
 		<i class="icon-remove"></i>
 		Delete
 	</button>
