--- a/app/scripts/apps/private/apps/open_menus/list/templates/panel.hbs
+++ b/app/scripts/apps/private/apps/open_menus/list/templates/panel.hbs
@@ -1,1 +1,1 @@
-<a class="btn btn-primary js-new" href="#">New open menu</a>
+<a class="btn btn-primary js-new" href="#" role="button">New open menu</a>
