--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,30 +1,2 @@
-@import url('../bower_components/sass-bootstrap/bootstrap-2.3.2.css');
-
-header {
-    border-bottom: 1px solid #ddd;
-    margin-bottom: 1em;
-    padding: 1em 0;
-}
-
-footer {
-    border-top:1px solid #ddd;
-    margin-top: 1em;
-    padding: 1em 0;
-}
-
-.margin-bottom-10px {
-    margin-bottom: 10px;
-}
-
-.textarea-xlarge {
-    width: 270px;
-}
-
-.modal > form {
-    margin-bottom: 0;
-}
-
-.modal-header > h2 {
-    margin-bottom: 0;
-    margin-top: 0;
-}
+@import url('../bower_components/bootstrap/dist/css/bootstrap.css');
+@import url('../bower_components/backbone-forms/distribution/templates/bootstrap3.css');
