changing model property names from camel case to underscore format per OpenMenu spec

--- a/app/scripts/apps/private/apps/menu_items/list/templates/list.hbs
+++ b/app/scripts/apps/private/apps/menu_items/list/templates/list.hbs
@@ -1,8 +1,6 @@
 <thead>
     <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Price</th>
+        <th>Menu item name</th>
         <th>&nbsp;</th>
     </tr>
 </thead>
