--- a/app/scripts/apps/private/apps/menu_items/list/templates/list_item.hbs
+++ b/app/scripts/apps/private/apps/menu_items/list/templates/list_item.hbs
@@ -1,6 +1,4 @@
-<td>{{menuItemName}}</td>
-<td>{{menuItemDescription}}</td>
-<td>{{menuItemPrice}}</td>
+<td>{{menu_item_name}}</td>
 <td>
 	<a class="btn btn-default btn-sm js-show" href="#" role="button">
 		<i class="icon-eye-open"></i>
