--- a/app/scripts/apps/private/apps/menus/list/templates/list.hbs
+++ b/app/scripts/apps/private/apps/menus/list/templates/list.hbs
@@ -1,7 +1,6 @@
 <thead>
     <tr>
-        <th>Menu Name</th>
-        <th>Currency Symbol</th>
+        <th>Menu name</th>
         <th>&nbsp;</th>
     </tr>
 </thead>
