--- a/app/scripts/apps/private/apps/menus/list/templates/list_item.hbs
+++ b/app/scripts/apps/private/apps/menus/list/templates/list_item.hbs
@@ -1,5 +1,4 @@
-<td>{{menuName}}</td>
-<td>{{currencySymbol}}</td>
+<td>{{menu_name}}</td>
 <td>
 	<a class="btn btn-default btn-sm js-show" href="#" role="button">
 		<i class="icon-eye-open"></i>
