--- a/app/scripts/apps/private/apps/open_menus/list/templates/list.hbs
+++ b/app/scripts/apps/private/apps/open_menus/list/templates/list.hbs
@@ -1,8 +1,6 @@
 <thead>
     <tr>
-        <th>Restaurant Name</th>
-        <th>Address</th>
-        <th>Phone</th>
+        <th>Restaurant name</th>
         <th>&nbsp;</th>
     </tr>
 </thead>
