--- a/app/scripts/apps/private/apps/menu_groups/list/templates/list_item.hbs
+++ b/app/scripts/apps/private/apps/menu_groups/list/templates/list_item.hbs
@@ -1,4 +1,4 @@
-<td>{{groupName}}</td>
+<td>{{group_name}}</td>
 <td>
 	<a class="btn btn-default btn-sm js-show" href="#" role="button">
 		<i class="icon-eye-open"></i>
