--- a/app/scripts/apps/private/apps/open_menus/list/templates/list_item.hbs
+++ b/app/scripts/apps/private/apps/open_menus/list/templates/list_item.hbs
@@ -1,11 +1,5 @@
 <td>
-	{{restaurantInfo.restaurantName}}
-</td>
-<td>
-	{{restaurantInfo.address1}}, {{restaurantInfo.cityTown}}, {{restaurantInfo.stateProvince}}
-</td>
-<td>
-	{{restaurantInfo.phone}}
+	{{restaurant_info.restaurant_name}}
 </td>
 <td>
 	<a class="btn btn-default btn-sm js-show" href="#" role="button">
