--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,2 +1,2 @@
-@import url('../bower_components/bootstrap/dist/css/bootstrap.css');
-@import url('../bower_components/backbone-forms/distribution/templates/bootstrap3.css');
+@import url('lib/vendor/bootstrap.css');
+@import url('lib/vendor/bootstrap3.css');
