--- a/app/scripts/apps/private/common/views/templates/dialog.hbs
+++ b/app/scripts/apps/private/common/views/templates/dialog.hbs
@@ -2,6 +2,7 @@
 	<div class="modal-content">
 		<div class="modal-header">
 		    <button aria-hidden="true" class="close" type="button">&times;</button>
+		    <div class="modal-title"></div>
 		</div>
 		<div class="modal-body clearfix">
 		</div>
