use Bootstrap panels for the different sections on the open menu page

--- a/app/scripts/apps/private/apps/open_menus/show/views/templates/layout.hbs
+++ b/app/scripts/apps/private/apps/open_menus/show/views/templates/layout.hbs
@@ -1,13 +1,9 @@
-<h2>Title</h2>
 <div class="row">
 	<div class="col-sm-6">
-		<h3>Restaurant</h3>
-		<div id="a"></div>
+		<div id="restaurant-region"></div>
 	</div>
 	<div class="col-sm-6">
-		<h3>Environment</h3>
-		<div id="b"></div>
-		<h3>Title</h3>
-		<div id="c"></div>
+		<div id="environment-region"></div>
+		<div id="menus-region"></div>
 	</div>
 </div>
