--- a/app/scripts/apps/private/apps/open_menus/show/views/templates/menu.hbs
+++ b/app/scripts/apps/private/apps/open_menus/show/views/templates/menu.hbs
@@ -1,13 +1,17 @@
-<td>{{menu_name}}</td>
-<td>
+<td class="col-sm-9">{{menu_name}}</td>
+<td class="col-sm-1">
 	<a class="btn btn-default btn-sm js-show" href="#" role="button">
 		<i class="icon-eye-open"></i>
 		Show
 	</a>
+</td>
+<td class="col-sm-1">
 	<a class="btn btn-default btn-sm js-edit" href="#" role="button">
 		<i class="icon-pencil"></i>
 		Edit
 	</a>
+</td>
+<td class="col-sm-1">
 	<button class="btn btn-default btn-sm js-delete" role="button">
 		<i class="icon-remove"></i>
 		Delete
