--- a/app/scripts/apps/private/common/views/templates/dialog.hbs
+++ b/app/scripts/apps/private/common/views/templates/dialog.hbs
@@ -1,10 +1,10 @@
 <div class="modal-dialog">
 	<div class="modal-content">
 		<div class="modal-header">
-		    <button aria-hidden="true" class="close" type="button">&times;</button>
+		    <button aria-hidden="true" class="close js-close" type="button">&times;</button>
 		    <div class="modal-title"></div>
 		</div>
-		<div class="modal-body clearfix">
+		<div class="modal-body">
 		</div>
 		<div class="modal-footer">
 		</div>
